--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(EDI_projeto1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(EDI_projeto1 main.c
+add_executable(EDI_projeto1
         pilha.c
         pilha.h)
