criação dos arquivos fila.c/h e circulo.c/h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(EDI_projeto1
         pilha.c
-        pilha.h)
+        pilha.h
+        fila.c
+        fila.h
+        circulo.c
+        circulo.h)
