no próximo commit, fazer alterações nos setters que alocam memoria dinamicamente

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,6 @@ add_executable(EDI_projeto1
         retangulo.c
         retangulo.h
         linha.c
-        linha.h)
+        linha.h
+        texto.c
+        texto.h)
