--- a/src/makefile
+++ b/src/makefile
@@ -1,40 +1,30 @@
-# Nome do executável final
-PROJ_NAME = ted
+#  Autor: Pietro Fernando Pelizon
 
-NOME_ALUNO = Pietro Fernando Pelizon
+PROJ_NAME := ted
+CC        := gcc
+CFLAGS    := -W -Wall -Wextra -ggdb -std=c99 -fstack-protector-all
+LIBS      := -lm
 
-# Compilador a ser usado
-CC=gcc
+SOURCES   := $(wildcard *.c)
+OBJETOS   := $(SOURCES:.c=.o)
 
-# Flags de compilação: warnings, debug, padrão C99, proteção de stack
-CFLAGS=-W -Wall -Wextra -ggdb -std=c99 -fstack-protector-all
 
-# Bibliotecas a serem linkadas (lm para a biblioteca de matemática)
-LIBS=-lm
+# Regras de compilação:
 
-# Lista de todos os seus arquivos fonte .c
-# O make automaticamente encontrará todos os arquivos .c no diretório atual
-SOURCES=$(wildcard *.c)
-
-# Cria a lista de arquivos objeto .o a partir da lista de fontes
-OBJETOS=$(SOURCES:.c=.o)
-
-# --- REGRAS DE COMPILAÇÃO ---
-
-# A regra 'all' é a padrão, que compila o projeto
 all: $(PROJ_NAME)
 
-# Regra para linkar todos os arquivos objeto e criar o executável final
 $(PROJ_NAME): $(OBJETOS)
-	$(CC) -o $(PROJ_NAME) $(OBJETOS) $(LIBS)
+	@echo "Linkando $(PROJ_NAME)..."
+	@$(CC) -o $@ $^ $(LIBS)
+	@echo "✓ Build completo!"
 
-# Regra genérica para compilar um arquivo .c em um arquivo .o
 %.o: %.c
-	$(CC) -c $(CFLAGS) $< -o $@
+	@echo "Compilando $<..."
+	@$(CC) -c $(CFLAGS) $< -o $@
 
-# Regra para limpar os arquivos gerados (executáveis e objetos)
 clean:
-	rm -f *.o $(PROJ_NAME)
+	@echo "Limpando arquivos..."
+	@rm -f *.o $(PROJ_NAME)
+	@echo "✓ Limpeza concluída!"
 
-# Define que 'all' e 'clean' não são nomes de arquivos
 .PHONY: all clean
